Adding InterIUT WU OSINT_SE

--- a/en/writeups/inter-iut-2020/osint_se_challenge/index.html
+++ b/en/writeups/inter-iut-2020/osint_se_challenge/index.html
@@ -198,21 +198,21 @@
 
 <ul>
 <li><a href="#sommaire">Sommaire</a></li>
-<li><a href="#énoncé">Énoncé</a></li>
-<li><a href="#analyse-du-fichier-et-recherche-d-éléments">Analyse du fichier et recherche d&rsquo;éléments</a></li>
-<li><a href="#séquence-adn-et-traits-de-caractère">Séquence ADN et traits de caractère</a></li>
-<li><a href="#préparation-du-phishing">Préparation du phishing</a>
+<li><a href="#initial-statement">Initial statement</a></li>
+<li><a href="#file-analysys-and-gathering-first-elements">File analysys and gathering first elements</a></li>
+<li><a href="#dna-sequence-and-personnality">DNA Sequence and personnality</a></li>
+<li><a href="#preparing-the-phishing">Preparing the phishing</a>
 
 <ul>
-<li><a href="#leurre-et-payload">Leurre et Payload</a></li>
-<li><a href="#page-et-infrastructure">Page et Infrastructure</a></li>
-<li><a href="#test-de-fonctionnement">Test de fonctionnement</a></li>
-<li><a href="#expéditeur-et-e-mail">Expéditeur et E-mail</a></li>
+<li><a href="#bait-and-payload">Bait and Payload</a></li>
+<li><a href="#page-and-infrastructure">Page and Infrastructure</a></li>
+<li><a href="#tests">Tests</a></li>
+<li><a href="#sender-and-e-mail">Sender and E-mail</a></li>
 </ul></li>
 <li><a href="#phish-and-flag">Phish and Flag</a></li>
 </ul>
 
-<h2 id="énoncé">Énoncé</h2>
+<h2 id="initial-statement">Initial statement</h2>
 
 <pre><code>After intensive research you have found a strange file concerning
 one of RandomCorp's technicians. Recover its
