Adding InterIUT WU OSINT_SE

--- a/en/writeups/inter-iut-2020/osint_se_challenge/index.html
+++ b/en/writeups/inter-iut-2020/osint_se_challenge/index.html
@@ -194,10 +194,10 @@
 
 <p>This challenge is mainly focused on OSINT notions related to DNA tests available to the public, then a part of &ldquo;Social Engineering&rdquo; in order to retrieve information. You will notice that it was the perfect opportunity to carry out the world worst phishing (or the dirtiest!).</p>
 
-<h2 id="sommaire">Sommaire</h2>
+<h2 id="summary">Summary</h2>
 
 <ul>
-<li><a href="#sommaire">Sommaire</a></li>
+<li><a href="#summary">Summary</a></li>
 <li><a href="#initial-statement">Initial statement</a></li>
 <li><a href="#file-analysys-and-gathering-first-elements">File analysys and gathering first elements</a></li>
 <li><a href="#dna-sequence-and-personnality">DNA Sequence and personnality</a></li>
