--- a/fr/about/index.html
+++ b/fr/about/index.html
@@ -159,7 +159,7 @@
 	
 	
 	
-	&nbsp;<a href="https://haaxmax.github.io/fr/index.xml" target="blank"><i class="fas fa-rss fa-lg" aria-hidden="true"></i></a>
+	&nbsp;<a href="https://haax.fr/fr/index.xml" target="blank"><i class="fas fa-rss fa-lg" aria-hidden="true"></i></a>
 	</section>
 
     </p>
@@ -237,6 +237,8 @@ Ingénieur diplômé et maintenant Consultant SSI (Pentester). Intéressé par l
 <h1 id="licence">Licence</h1>
 
 <p>Tous les contenus personnels publiés sur le site <a href="https://haax.fr/" target="blank">haax.fr</a> sont mis à disposition selon les termes de la licence <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="blank">Creative Commons Attribution – Pas d’Utilisation Commerciale – Partage dans les Mêmes Conditions 4.0 International</a></p>
+
+<p>TEST</p>
 
   </div>
   
