--- a/en/walkthroughs/hackthebox/haystack/index.html
+++ b/en/walkthroughs/hackthebox/haystack/index.html
@@ -163,7 +163,7 @@ Haystack est une machine Linux catégorisée comme facile et plutôt intéressan
 	
 	
 	
-	&nbsp;<a href="https://haaxmax.github.io/en/index.xml" target="blank"><i class="fas fa-rss fa-lg" aria-hidden="true"></i></a>
+	&nbsp;<a href="https://haax.fr/en/index.xml" target="blank"><i class="fas fa-rss fa-lg" aria-hidden="true"></i></a>
 	</section>
 
     </p>
