--- a/en/walkthroughs/hackthebox/jarvis/index.html
+++ b/en/walkthroughs/hackthebox/jarvis/index.html
@@ -163,7 +163,7 @@ Jarvis est une machine Linux catégorisée comme facile/moyenne. L&rsquo;exploit
 	
 	
 	
-	&nbsp;<a href="https://haaxmax.github.io/en/index.xml" target="blank"><i class="fas fa-rss fa-lg" aria-hidden="true"></i></a>
+	&nbsp;<a href="https://haax.fr/en/index.xml" target="blank"><i class="fas fa-rss fa-lg" aria-hidden="true"></i></a>
 	</section>
 
     </p>
