Update OSINT/GEOINT volume 2

--- a/fr/index.html
+++ b/fr/index.html
@@ -187,7 +187,7 @@
     
       <div class="post-list__item">
         <span class="item__title--big">
-          <a href="/fr/writeups/osint-geoint/osint-flight-volume2-overpassturbo/">OSINT/GEOINT - Investigation et Geolocalisation #2 - Overpass Turbo</a>
+          <a href="/fr/writeups/osint-geoint/osint-flight-volume2-overpassturbo/">OSINT/GEOINT - Investigation et Géolocalisation #2 - Overpass Turbo</a>
         </span>
         <span class="item__date">
           <i class="fas fa-clock"></i> 23 min read -
