Update OSINT/GEOINT volume 2

--- a/fr/writeups/osint-geoint/osint-flight-volume2-overpassturbo/index.html
+++ b/fr/writeups/osint-geoint/osint-flight-volume2-overpassturbo/index.html
@@ -268,7 +268,7 @@ Light Value                     : 14.2
 
 <h2 id="méthode-1-la-classique-résolution-par-analyse-des-vols">Méthode 1 : La classique, résolution par analyse des vols</h2>
 
-<p>Si vous avez lu mon premier article sur le sujet, cela va sous sembler familier. En effet, connaissant l&rsquo;heure approximative du vol, et plus précisément de l&rsquo;atterrissage grâce à la basse altitude de l&rsquo;appareil ainsi que la compagnie opérant le vol, l&rsquo;identifiation peut se faire relativement facilement au moyen de différents outils de suivi et d&rsquo;analyse de vols.</p>
+<p>Si vous avez lu mon premier article sur le sujet, cela va vous sembler familier. En effet, connaissant l&rsquo;heure approximative du vol, et plus précisément de l&rsquo;atterrissage grâce à la basse altitude de l&rsquo;appareil ainsi que la compagnie opérant le vol, l&rsquo;identifiation peut se faire relativement facilement au moyen de différents outils de suivi et d&rsquo;analyse de vols.</p>
 
 <p>Je l&rsquo;avais déjà mentionné auparavant, mais les outils à suivre permettent un accès gratuit aux historiques de vols de manière limitée dans le temps. L&rsquo;accès à des données plus anciennes est également possible, mais il s&rsquo;agit généralement de services payants.</p>
 
@@ -291,7 +291,7 @@ Light Value                     : 14.2
 <p><center><img src="/img/writeups/osint_geoint/flight-challenge-overpass/CLASSIC_3.PNG" alt="Flight playback" class="imgSize"/></center>
 <em class="imageCaption">Fig. 5 : Rejeu du vol U24052 via FlightRadar24</em></p>
 
-<p>On se place à l&rsquo;heure de la prise de la photo, 11h55 (rappelez vous, 9h55 sur l&rsquo;application car nous sommes en format UTC) et on peut ainsi voir la position et l&rsquo;orientation de l&rsquo;appareil, ainsi que son altitude de 1800 pieds. Comme je n&rsquo;ai pas énormément de notion relatives à ces échelles, Google m&rsquo;indique que cela correspond à environ 550 mètres.</p>
+<p>On se place à l&rsquo;heure de la prise de la photo, 11h55 (rappelez vous, 9h55 sur l&rsquo;application car nous sommes en format UTC) et on peut ainsi voir la position et l&rsquo;orientation de l&rsquo;appareil, ainsi que son altitude de 1800 pieds. Comme je n&rsquo;ai pas énormément de notions relatives à ces échelles, Google m&rsquo;indique que cela correspond à environ 550 mètres.</p>
 
 <p><center><img src="/img/writeups/osint_geoint/flight-challenge-overpass/CLASSIC_4.PNG" alt="Aircraft position" class="imgSize"/></center>
 <em class="imageCaption">Fig. 6 : Position de l&rsquo;appareil à 11h55</em></p>
@@ -303,7 +303,7 @@ Light Value                     : 14.2
 <p><center><img src="/img/writeups/osint_geoint/flight-challenge-overpass/CLASSIC_5.PNG" alt="Aircraft position zoom" class="imgSize"/></center>
 <em class="imageCaption">Fig. 7 : Zoom sur la position de l&rsquo;appareil</em></p>
 
-<p>L&rsquo;image montre en effet plusieurs points d&rsquo;eau proche de la position de l&rsquo;appareil, sur sa gauche, ce qui correspond à notre recherche. De plus, nous avions identifié un trait particulier par rapport à ces derniers. En effet, l&rsquo;image originale montre au moins 3 points d&rsquo;eau ayant une forme plutôt proche de ceux représentés sur la carte.</p>
+<p>L&rsquo;image montre en effet plusieurs points d&rsquo;eau proches de la position de l&rsquo;appareil, sur sa gauche, ce qui correspond à notre recherche. De plus, nous avions identifié un trait particulier par rapport à ces derniers. En effet, l&rsquo;image originale montre au moins 3 points d&rsquo;eau ayant une forme plutôt proche de ceux représentés sur la carte.</p>
 
 <p>Ayant la position exacte de l&rsquo;appareil ainsi que des points d&rsquo;eau potentiels, on peut maintenant essayer de trouver des images plus précises de la zone afin de voir si cela correspond. L&rsquo;excellent Google Earth Pro répond parfaitement à ce besoin. On se rend à la position indiquée de l&rsquo;appareil puis après une légère orientation, on obtient l&rsquo;image suivante.</p>
 
